<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="immedia.superhero.app.HeroCardActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="405dp">
        <LinearLayout
            android:id="@+id/cardHeroImageBackground"
            android:background="@drawable/pic"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/cardHeroImage"
                android:layout_marginTop="45dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/icon_"
                android:background="@drawable/edit_text"/>
            <TextView
                android:id="@+id/cardHeroName"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:text="Name"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="21sp"/>

            <TextView
                android:id="@+id/cardHeroPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lobster"
                android:text="Publisher"
                android:textColor="#e9ebf0"
                android:textSize="15sp"
                android:textStyle="italic" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:id="@+id/viewPowerStats"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="275dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:text="Strength"
                        android:textSize="20sp" />
                    <TextView
                        android:id="@+id/cardHeroStrength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:text="125"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:text="Speed"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/cardHeroSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1205"
                        android:textStyle="bold"
                        android:fontFamily="@font/lobster"
                        android:textSize="20sp"
                        android:paddingTop="10dp"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:text="Power"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/cardHeroPower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lobster"
                        android:text="360"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:paddingTop="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingLeft="10dp"
                android:fontFamily="@font/lobster"
                android:text="@string/full_names"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cardHeroFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingLeft="10dp"
                android:fontFamily="@font/lobster"
                android:text="@string/first_appeared"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cardHeroFirstAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:paddingLeft="10dp"
                android:fontFamily="@font/lobster"
                android:text="@string/affiliations"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cardHeroAffiliations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="@font/lobster"
                android:paddingLeft="10dp"
                android:text="@string/relatives"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cardHeroRelatives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/relatives" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="@font/lobster"
                android:paddingLeft="10dp"
                android:text="@string/weight"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cardHeroWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/weight" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="@font/lobster"
                android:paddingLeft="10dp"
                android:text="@string/height"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/heroHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/height" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:fontFamily="@font/lobster"
                android:paddingLeft="10dp"
                android:text="@string/work"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/heroWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lobster"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/work" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnDownloadPoster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:clickable="true"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/download"
        android:textColor="#fff" />

</LinearLayout>
</ScrollView>